# GoL_CUDA

./: CMakeLists.txt  README.md  Shader.hpp  cpu.hpp  data.hpp  display.hpp  gpu.cuh  main  main.cpp  main.cu  shader.fs  shader.vs  utils.hpp
glad/: glad.c  glad.h
